--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph= Allows the programmer to use the LED matrix as a pixel device, displa
 category=Device Control
 url=https://github.com/MajicDesigns/MAX72xx
 architectures=*
-includes=MD_MAX72xx.h
+includes=MD_MAX72xx.h,SPI.h
