--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=MD_MAX72XX
-version=2.9
-author=MajicDesigns
+version=2.9.0
+author=majicDesigns
 maintainer=marco_c <8136821@gmail.com>
 sentence=Implements functions that allow the MAX72xx (eg, MAX7219) to be used for LED matrices (64 individual LEDs)
 paragraph= Allows the programmer to use the LED matrix as a pixel device, displaying graphics elements much like any other pixel addressable display.
