--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v1
+      - name: Install libraries
+        uses: Legion2/download-release-action@v2.1.0
+        with:
+          repository: MajicDesigns/MD_UISwitch
+          tag: 2.1.0
+          path: libraries
       - name: Compile examples using Arduino Uno
         uses: pfeerick/arduino-builder-action@master
         with:
